Added free trial Page

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,8 @@ a:hover {
   height: 55px;
   font-size: 14px;
   padding: 10px 20px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 600;
 }
 
 .form-control:focus {
@@ -858,6 +860,144 @@ somrat starts from here
 
 .feature .cta p {
   margin-bottom: 20px;
+}
+
+.trial__block {
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  position: relative;
+}
+
+.trial__block img {
+  width: 350px;
+  margin-bottom: 50px;
+}
+
+.trial__block p {
+  margin-bottom: 50px;
+}
+
+.trial__block .scroll__down {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: 40px;
+  z-index: 2;
+  text-align: center;
+}
+
+.trial__block .scroll__down:hover {
+  text-decoration: none;
+}
+
+.trial__block .scroll__down i {
+  font-size: 30px;
+  color: #22d5da;
+  animation: updown .8s ease-in infinite alternate-reverse;
+  display: block;
+}
+
+.trial__account {
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+}
+
+.trial__details {
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+}
+
+.trial__details .user {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #dedede;
+}
+
+.trial__details .user img {
+  border-radius: 100%;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+}
+
+.trial__details .user h6 {
+  margin-bottom: 20px;
+}
+
+.trial__details .posts {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #dedede;
+}
+
+.trial__details .posts .post-thumb {
+  position: relative;
+}
+
+.trial__details .posts .post-thumb img {
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+}
+
+.trial__details .posts .post-thumb .like-number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.trial__details .posts .post-thumb .like-number i, .trial__details .posts .post-thumb .like-number span {
+  display: inline-block;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.trial__details .posts .post-thumb .like-number i {
+  margin-right: 10px;
+}
+
+.trial__details .posts .post-thumb .like-number span {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 600;
+}
+
+.trial__details .order .order-item {
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.trial__details .order .order-item img {
+  width: 70px;
+  height: 70px;
+  border-radius: 4px;
+  margin-right: 20px;
+}
+
+.trial__details .order .order-item i {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.trial__submit {
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+  padding: 50px;
 }
 
 .blog .section__title {
