--- a/css/style.css
+++ b/css/style.css
@@ -1053,6 +1053,41 @@ somrat starts from here
   padding: 0 0 0 40px;
 }
 
+.blog__date {
+  text-align: center;
+  position: relative;
+  padding-top: 20px;
+  margin-right: 20px;
+}
+
+.blog__date::before {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 3px;
+  height: 2px;
+  width: 100%;
+  background: #22d5da;
+}
+
+.blog__content h3 {
+  margin-bottom: 20px;
+}
+
+.blog__content p {
+  margin-bottom: 30px;
+}
+
+.blog__content img {
+  margin-bottom: 100px;
+  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
+}
+
+.blog__content img.mobile {
+  width: 500px;
+  height: auto;
+}
+
 .faq__accordion .card {
   background: #fff;
   box-shadow: 0px 6px 20px 1px rgba(0, 0, 0, 0.05);
