--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ textarea.form-control {
 }
 
 .service__item {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 .service__content h3 {
@@ -467,68 +467,154 @@ textarea.form-control {
 
 .service__image {
   position: relative;
-  height: 450px;
+  height: 500px;
 }
 
 .service__image .image {
   position: absolute;
 }
 
-.service__image .image img {
-  box-shadow: 4px 13px 25px 1px rgba(0, 0, 0, 0.1);
-}
-
 .service__image.followers .right {
   right: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 20px;
+  z-index: 1;
+  animation: left_anim 6s ease-in infinite alternate-reverse;
 }
 
-.service__image.followers .left-top {
-  bottom: 250px;
+.service__image.followers .right img {
+  width: 350px;
+}
+
+.service__image.followers .left {
   left: 0;
+  bottom: 20px;
+  z-index: 1;
+  animation: right_anim 5s ease-in infinite alternate-reverse;
 }
 
-.service__image.followers .left-top img {
-  border-radius: 100px;
-  max-width: 175px;
+.service__image.followers .left img {
+  width: 350px;
 }
 
-.service__image.followers .left-middle {
-  bottom: 185px;
-  left: 185px;
-}
-
-.service__image.followers .left-middle img {
-  border-radius: 100px;
-  max-width: 175px;
-}
-
-.service__image.followers .left-bottom {
-  bottom: 100px;
-  left: 20px;
-}
-
-.service__image.followers .left-bottom img {
-  border-radius: 100px;
-  max-width: 175px;
-}
-
-.service__image.likes .left {
-  left: 0;
+.service__image.followers .middle {
+  left: 50%;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.service__image.followers .middle img {
+  width: 420px;
 }
 
 .service__image.likes .right {
   right: 0;
-  bottom: 0;
+  bottom: 20px;
+  z-index: 1;
+  animation: left_anim 6s ease-in infinite alternate-reverse;
 }
 
 .service__image.likes .right img {
-  max-width: 350px;
+  width: 350px;
+}
+
+.service__image.likes .left {
+  left: 0;
+  top: 68px;
+  z-index: 1;
+  animation: right_anim 5s ease-in infinite alternate-reverse;
+}
+
+.service__image.likes .left img {
+  width: 350px;
+}
+
+.service__image.likes .middle {
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.service__image.likes .middle img {
+  width: 420px;
+}
+
+.service__image.views .right {
+  right: 0;
+  bottom: 20px;
+  z-index: 1;
+  animation: left_anim 6s ease-in infinite alternate-reverse;
+}
+
+.service__image.views .right img {
+  width: 350px;
+}
+
+.service__image.views .left {
+  left: 0;
+  top: 68px;
+  z-index: 1;
+  animation: right_anim 5s ease-in infinite alternate-reverse;
+}
+
+.service__image.views .left img {
+  width: 350px;
+}
+
+.service__image.views .middle {
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.service__image.views .middle img {
+  width: 420px;
+}
+
+.service__image.a-likes .right-top {
+  right: 0;
+  top: -20px;
+  z-index: 1;
+  animation: left_anim 6s ease-in infinite alternate-reverse;
+}
+
+.service__image.a-likes .right-top img {
+  width: 150px;
+}
+
+.service__image.a-likes .right-bottom {
+  right: 0;
+  bottom: 20px;
+  z-index: 1;
+  animation: left_anim 6s ease-in infinite alternate-reverse;
+}
+
+.service__image.a-likes .right-bottom img {
+  width: 150px;
+}
+
+.service__image.a-likes .left {
+  left: 0;
+  top: 68px;
+  z-index: 1;
+  animation: right_anim 5s ease-in infinite alternate-reverse;
+}
+
+.service__image.a-likes .left img {
+  width: 150px;
+}
+
+.service__image.a-likes .middle {
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.service__image.a-likes .middle img {
+  width: 420px;
 }
 
 .service__title-secondary {
@@ -563,8 +649,52 @@ textarea.form-control {
   right: 0;
 }
 
+@-webkit-keyframes left_anim {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+}
+
+@keyframes left_anim {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+}
+
+@-webkit-keyframes right_anim {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+}
+
+@keyframes right_anim {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+}
+
 /* ==================================================================================
-somrat starts from here
+New Styles from here
 ===================================================================================== */
 .features__item {
   margin-bottom: 100px;
@@ -1089,6 +1219,12 @@ somrat starts from here
   padding: 40px;
 }
 
+@media (max-width: 991px) {
+  .blog__post.featured {
+    flex-direction: column;
+  }
+}
+
 .blog__post.featured .post-thumb {
   flex-basis: 40%;
 }
@@ -1096,6 +1232,12 @@ somrat starts from here
 .blog__post.featured .post-content {
   flex-basis: 60%;
   padding: 0 0 0 40px;
+}
+
+@media (max-width: 991px) {
+  .blog__post.featured .post-content {
+    padding: 30px 0 0 0;
+  }
 }
 
 .blog__date {
@@ -1115,6 +1257,10 @@ somrat starts from here
   background: #22d5da;
 }
 
+.blog__content {
+  width: calc(100% - 120px);
+}
+
 .blog__content h3 {
   margin-bottom: 20px;
 }
@@ -1129,8 +1275,13 @@ somrat starts from here
 }
 
 .blog__content img.mobile {
-  width: 500px;
-  height: auto;
+  max-width: 500px;
+}
+
+@media (max-width: 991px) {
+  .blog__content img.mobile {
+    max-width: 100%;
+  }
 }
 
 .faq__accordion .card {
